--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express-formidable": "^1.0.0",
     "mongoose": "^4.7.5",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "cheerio": "^0.22.0",
+    "moment": "^2.15.2",
+    "node-schedule": "^1.2.0",
+    "superagent": "^2.3.0"
   }
 }
