--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "cheerio": "^0.22.0",
+    "config-lite": "^1.5.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-formidable": "^1.0.0",
+    "moment": "^2.15.2",
     "mongoose": "^4.7.5",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "cheerio": "^0.22.0",
-    "moment": "^2.15.2",
     "node-schedule": "^1.2.0",
+    "serve-favicon": "~2.3.0",
     "superagent": "^2.3.0"
   }
 }
